--- a/templates/ticket/ticketpage.html.twig
+++ b/templates/ticket/ticketpage.html.twig
@@ -1,10 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<p>
-		Temps d'attente estimé
-		{{waitingTime}}
-		minutes
-	</p>
-	<h1>{{ticket.numero}}</h1>
+	<div class="container d-flex justify-content-center align-items-center min-vh-100">
+		<div class="card shadow p-5 text-center" style="max-width: 500px; width: 100%;">
+			<h3 class="mb-4 text-muted">Temps d'attente estimé</h3>
+			<p class="display-6 mb-5">{{ waitingTime }}
+				minutes</p>
+
+			<h4 class="mb-3 text-primary">Votre numéro de ticket</h4>
+			<div class="display-1 fw-bold text-success">
+				{{ ticket.numero }}
+			</div>
+		</div>
+	</div>
 {% endblock %}
