--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,32 @@
 		<link rel="stylesheet" href="https://bootswatch.com/5/litera/bootstrap.min.css">
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"> {% block stylesheets %}{% endblock %}{% block javascripts %}{% endblock %}
 		</head>
+		<!-- Header -->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="{{ path('app_patient') }}">Mon Application</a>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto">
+						{% if app.user %}
+							<!-- Si l'utilisateur est connecté, afficher Déconnexion -->
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+								<a class="nav-link" href="{{ path('admin_tickets') }}">Administration</a>
+							</li>
+
+						{% else %}
+							<!-- Si l'utilisateur n'est pas connecté, afficher Inscription et Connexion -->
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+							</li>
+						{% endif %}
+					</ul>
+				</div>
+			</div>
+		</nav>
 		<body>
 			{% block body %}{% endblock %}
 		</body>
