--- a/templates/formulairePatient/formulairepatient.html.twig
+++ b/templates/formulairePatient/formulairepatient.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<div class="container d-flex justify-content-center align-items-center min-vh-100">
-		<div class="card shadow p-4" style="min-width: 400px; max-width: 600px; width: 100%;">
+		<div class="card shadow p-4" style="min-width: 300px; max-width: 600px; width: 100%;">
 			<h2 class="text-center mb-4">Inscription Patient</h2>
 
 			{{ form_start(formulairepatient) }}
@@ -52,7 +52,7 @@
 			</div>
 
 			<div class="d-grid">
-				<button type="submit" class="btn btn-success">Envoyer</button>
+				<button type="submit" class="btn btn-success btn-lg">Envoyer</button>
 			</div>
 
 			{{ form_end(formulairepatient) }}
