--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -9,10 +9,22 @@
 				<div class="list-group-item d-flex justify-content-between align-items-center">
 					<div>
 						<strong>{{ ticket.numero }}</strong>
+						Nom :
+						{{ ticket.patient.nom }}
 						-
+												Prénom :
+						{{ ticket.patient.prenom }}
+						-
+						            						-
+												Adresse :
+						{{ ticket.patient.adresse }}
+						---
+												Statut :
 						{{ ticket.statut }}
 						-
-						{{ ticket.heureArrivee|date('d/m/Y H:i') }}
+												Heure d'arrivée
+						{{ ticket.heureArrivee|date('H:i') }}
+
 					</div>
 					<a href="{{ path('admin_ticketdelete', {'id': ticket.id}) }}" class="btn btn-success btn-sm">Traité</a>
 				</div>
